--- a/App1/UnitTestProject1/UnitTestProject1.csproj
+++ b/App1/UnitTestProject1/UnitTestProject1.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CNDate.cs" />
     <Compile Include="DateTimeExtensonMethod.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
