--- a/App1/UnitTestProject1/UnitTestProject1.csproj
+++ b/App1/UnitTestProject1/UnitTestProject1.csproj
@@ -50,8 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ChineseLunarDateTime.cs" />
     <Compile Include="CNDate.cs" />
-    <Compile Include="DateTimeExtensonMethod.cs" />
+    <Compile Include="DateTimeExtensionMethod.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
